--- a/han.html
+++ b/han.html
@@ -115,7 +115,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Huỳnh Ánh Dương - Profile</title>
+    <title>Nguyễn Huỳnh Bảo Hân - Profile</title>
 
     <!-- Font Comfortaa -->
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600;700&display=swap" rel="stylesheet">
@@ -227,13 +227,12 @@
             <img src="anh4.jpg" alt="Huỳnh Ánh Dương">
         </div>
         <div class="profile-info">
-            <h1>Huỳnh Ánh Dương</h1>
-            <p><span class="label">Ngày sinh:</span> 09/10/2008</p>
-            <p><span class="label">Số điện thoại:</span> 0944172514</p>
-            <p><span class="label">Email:</span> aduo0908@gmail.com</p>
-            <p><span class="label">Sở thích:</span> Thích tìm niềm vui</p>
-            <p class="quote">"Vivre pour l'amour<br>
-                                Trouve la joie, appelle-moi🤙🏻"</p>
+            <h1>Nguyễn Huỳnh Bảo Hân</h1>
+            <p><span class="label">Ngày sinh:</span> 03/03/2008</p>
+            <p><span class="label">Số điện thoại:</span> 0819529588</p>
+            <p><span class="label">Email:</span> baohannguyenhuynh00308@gmail.com</p>
+            <p><span class="label">Sở thích:</span> Thích xem phim</p>
+            <p class="quote">"I can't change the direction of the wind, but I can adjust my sails to always reach my destination."</p>
         </div>
     </div>
 
