--- a/bai12.html
+++ b/bai12.html
@@ -77,7 +77,112 @@
 
     <div class="content">
         <textarea class="raw-text" readonly>
-<!-- ... giữ nguyên nội dung cũ của bạn ở đây ... -->
+Luyện tập trang 70 Tin học 12: Lần lượt tạo các loại phần tử form và các phần tử input với những loại dữ liệu khác nhau và liệt kê ra ba ví dụ có thể sử dụng của từng loại.
+
+Lời giải:
+*Phần tử Form:
+-Form cơ bản:
+Ví dụ: Một biểu mẫu đăng ký tài khoản.
+<<form action="/register" method="post">
+  <!-- Các phần tử input và nút gửi dữ liệu sẽ được thêm vào đây -->
+</form>
+-Form có phần tử select:
+Ví dụ: Form chọn quốc gia.
+<form>
+  <label for="country">Quốc gia:</label>
+  <select id="country" name="country">
+    <option value="vietnam">Việt Nam</option>
+    <option value="usa">United States</option>
+    <option value="uk">United Kingdom</option>
+    <!-- Các quốc gia khác có thể được thêm vào đây -->
+  </select>
+</form>
+- Form với textarea:
+Ví dụ: Một ô nhập văn bản lớn cho người dùng nhập ý kiến hoặc phản hồi.
+<form>
+  <label for="feedback">Phản hồi:</label><br>
+  <textarea id="feedback" name="feedback" rows="4" cols="50"></textarea>
+</form>
+*Phần tử Input:
+-Input kiểu text:
+Ví dụ: Ô nhập tên người dùng.
+<form>
+  <label for="username">Tên người dùng:</label>
+  <input type="text" id="username" name="username">
+</form>
+- Input kiểu email:
+Ví dụ: Ô nhập địa chỉ email.
+<form>
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email">
+</form>
+-Input kiểu date:
+Ví dụ: Ô chọn ngày sinh.
+<form>
+  <label for="birthdate">Ngày sinh:</label>
+  <input type="date" id="birthdate" name="birthdate">
+</form>
+
+
+Vận dụng 1 trang 70 Tin học 12: Tạo một biểu mẫu đăng kí thành viên câu lạc bộ.
+Lời giải:
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Biểu mẫu đăng ký thành viên</title>
+</head>
+<body>
+<h2>Đăng ký thành viên</h2>
+<form action="/submit_registration" method="post">
+  <label for="fullname">Họ và tên:</label><br>
+  <input type="text" id="fullname" name="fullname" required><br>
+  <label for="email">Email:</label><br>
+  <input type="email" id="email" name="email" required><br>
+  <label for="birthdate">Ngày sinh:</label><br>
+  <input type="date" id="birthdate" name="birthdate" required><br>
+  <label for="membership">Loại hình thành viên:</label><br>
+  <select id="membership" name="membership">
+    <option value="basic">Thành viên cơ bản</option>
+    <option value="premium">Thành viên cao cấp</option>
+  </select><br>
+  <input type="submit" value="Đăng ký">
+</form>
+</body>
+</html>
+Vận dụng 2 trang 70 Tin học 12: Sửa lại mã nguồn của trang web đã viết trong Nhiệm vụ 2, Bài 11 để thêm một liên kết cho cụm từ Đăng kí. Khi nháy chuột vào liên kết, trang web đã viết ở câu 1 sẽ được hiển thị trong iframe.
+Lời giải:
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Trang web nghệ thuật</title>
+<style>
+  /* CSS để định dạng iframe */
+  iframe {
+    width: 100%;
+    height: 500px;
+    border: 1px solid #ccc;
+  }
+</style>
+</head>
+<body>
+<h1>Nghệ thuật</h1>
+<!-- Chèn ảnh minh họa -->
+<img src="link_den_anh_minh_hoa.jpg" alt="Hình ảnh minh họa" width="500" height="300">
+<!-- Chèn bài hát Quốc ca -->
+<audio controls>
+  <source src="link_den_bai_hat_quoc_ca.mp3" type="audio/mpeg">
+  Trình duyệt của bạn không hỗ trợ phát audio.
+</audio>
+<!-- Thêm liên kết "Đăng kí" -->
+<p><a href="link_den_trang_web.html" target="iframe_content">Đăng ký</a></p>
+<!-- iframe để hiển thị trang web đã viết ở câu 1 -->
+<iframe name="iframe_content" frameborder="0"></iframe>
+</body>
+</html>
         </textarea>
     </div>
 
@@ -87,3 +192,4 @@
 
 </body>
 </html>
+
