--- a/bai12.html
+++ b/bai12.html
@@ -18,18 +18,31 @@
         .container {
             max-width: 1100px;
             margin: auto;
-            background: #fff;
-            padding: 40px;
-            border-radius: 16px;
-            box-shadow: 0 4px 18px rgba(0,0,0,0.25);
+            background: #ffffff;
+            padding: 45px;
+            border-radius: 18px;
+            box-shadow: 0 6px 22px rgba(0,0,0,0.25);
         }
 
         h1 {
             text-align: center;
-            font-size: 38px;
+            font-size: 40px;
             margin-top: 0;
+            margin-bottom: 30px;
             font-weight: 700;
             color: #0056d6;
+        }
+
+        /* Khối tiêu đề bài tập */
+        .section-title {
+            background: linear-gradient(135deg, #e8f1ff, #f3f8ff);
+            border-left: 8px solid #0056d6;
+            padding: 18px 24px;
+            margin-bottom: 20px;
+            border-radius: 12px;
+            font-size: 24px;
+            font-weight: 700;
+            color: #003c9d;
         }
 
         .content {
@@ -37,25 +50,25 @@
             line-height: 1.9;
         }
 
-        /* textarea giữ nội dung */
+        /* textarea giữ nguyên nội dung */
         .raw-text {
             width: 100%;
             height: 680px;
-            padding: 18px;
+            padding: 22px;
             font-family: "Comfortaa", monospace;
             font-size: 18px;
             white-space: pre-wrap;
             overflow: auto;
             box-sizing: border-box;
             border: 2px solid #b8c1d1;
-            border-radius: 12px;
+            border-radius: 14px;
             background: #f6f8fa;
             outline: none;
         }
 
         a {
             display: inline-block;
-            margin-top: 30px;
+            margin-top: 35px;
             font-size: 22px;
             text-decoration: none;
             font-weight: 700;
@@ -74,6 +87,10 @@
 <div class="container">
 
     <h1>Bài 12: Tạo biểu mẫu</h1>
+
+    <div class="section-title">
+        📘 Luyện tập & Vận dụng – Tin học 12
+    </div>
 
     <div class="content">
         <textarea class="raw-text" readonly>
@@ -192,4 +209,3 @@ Lời giải:
 
 </body>
 </html>
-
